Hans Dockter's refactoring of gradle build, plus simplification of docbook plugin.